--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 bloatstrap.css linguist-vendored=false
+(^|/)bootstrap([^.]*)\.(js|css|less|scss|styl)$ linguist-vendored=false
+(^|/)custom\.bootstrap([^\s]*)(js|css|less|scss|styl)$ linguist-vendored=false
